# microcaml

./: .gitignore  CHANGELOG.md  cabal.project.freeze  codex.tags  flake.nix  microcaml.cabal  test.mocaml
app/: Main.hs
src/: AST.hs  Lexer.hs  Parser.hs
src/AST/: AST.hs
src/Lexer/: Combinators.hs  Lex.x  Lexer.hs  Token.hs
