cabal-version:      2.4
name:               microcaml
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         andreyborzenkov2002@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
  build-depends:
    , array
    , base                ^>=4.14.3.0
    , bytestring
    , llvm-hs
    , llvm-hs-pure
    , mtl
    , text
    , megaparsec
    , vector

  ghc-options:        -Wall
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

executable microcaml
  import:           deps
  main-is:          Main.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    microcaml
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -haddock

library
  import:           deps
  hs-source-dirs:   src
  exposed-modules:
    AST.AST
    Lexer.Lexer

  default-language: Haskell2010
  build-tools:    
